--- a/css/style_for_design.css
+++ b/css/style_for_design.css
@@ -143,13 +143,13 @@ video {
     flex-wrap: wrap;
 }
 
-#illustrations-area {
+/*#illustrations-area {
     width: 30%;
     padding: 0 0 0 20px;
-}
+}*/
 
 #main-area {
-    width: 45%;
+    width: 70%;
 }
 
 #sub-area {
