--- a/css/style_for_experiment.css
+++ b/css/style_for_experiment.css
@@ -107,12 +107,16 @@ video {
     text-indent: 1em;
 }
 /* experiment */
-table {
+.element {
     width: 60%;
-    margin: 0px 10px 0px 20px;
+    margin: -10px 0 0 0;
+}
+.sum {
+    width: 60%;
+    margin: 0 0 30px 0;
 }
 table.element, td, th {
-    border-bottom: 1px solid black;
+    border-bottom: 2px solid black;
 }
 .volume {
     text-align: right;
