--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,14 @@ video {
     /*box-shadow: 1px 1px 2px #ccc; */
     border: 1px solid #ccc;
 }
+.team_intro .col {
+    display: table;
+}
 
+.team_intro .col p {
+    display: table-cell;
+    vertical-align: middle;
+}
 .indvidual_photo { /* 個人画像 */
     text-align: center;
 }
