--- a/css/style_for_elsi.css
+++ b/css/style_for_elsi.css
@@ -106,7 +106,13 @@ video {
     padding-bottom: 5px;
     text-indent: 1em;
 }
-
+th, td {
+    padding: 10px;
+    text-align: center;
+}
+.hyou {
+    text-align: center;
+}
 
 /*ナビゲーションの固定*/
 /*ナビゲーションの固定*/
