--- a/css/style_for_simulation.css
+++ b/css/style_for_simulation.css
@@ -159,10 +159,15 @@ video {
 #area-1 li {
     list-style-type: none;
 }
+#area-4 li {
+    list-style-type: none;
+}
 #area-5 li {
     list-style-type: none;
 }
-
+#area-6 li {
+    list-style-type: none;
+}
 
 /*768px以下の見え方*/
 @media screen and (max-width:768px) {
